fix presentation overflow

--- a/style.css
+++ b/style.css
@@ -316,7 +316,6 @@ li.allCrew:nth-child(2) {
   background-color: #e6ccb2;
   width: 100%;
   height: 2.6em;
-  padding: 0 5%;
 }
 
 p.circleMembers:first-letter {
